--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@
    margin: 0; 
    padding: 0;
    text-decoration: none;
+   font-family: 'Roboto', sans-serif;
 }
 
 body {
+    font-size: 100%;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -23,10 +25,64 @@ body {
     align-items: center;
     justify-content: space-around;
     padding: 25px;
+    gap: 100px;
 }
 
 .menu {
 
     display: flex;
-    gap: 80px;
+    gap: 65px;
+}
+.item-menu{
+   font-size: 20px;
+
+}
+
+.area-principal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    border-top: 2px solid black;
+    padding: 50px;
+}
+
+.conteudo-principal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+
+
+}
+
+.titulo {
+    font-weight: 900;
+    font-size: 48px;
+    
+
+}
+.botao {
+    height: 100px;
+    width: 400px;
+    background-color: var(--cor-botao);
+    color: #fff;
+    border: none;
+    border-radius: 30px;
+    font-size: 30px;
+    font-weight: 700;
+    /*font-family: 'roboto', sans-serif;*/
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+.botao:hover{
+    background-color: var(--cor-botao-foco);
+
+}
+.rodape {
+    padding:50px;
+    border-top: 2px solid grey;
+    text-align: center;
+    
 }
